# MagicMirror

./: .gitignore  CMakeLists.txt  Calendar.cpp  Calendar.h  CalendarEntry.cpp  CalendarEntry.h  CathProximity.cpp  CathProximity.h  EdProximity.cpp  EdProximity.h  Forecast.cpp  Forecast.h  HomeAssistant.cpp  HomeAssistant.h  Line.cpp  Line.h  Proximity.cpp  Proximity.h  Renderable.cpp  Renderable.h  RenderableText.cpp  RenderableText.h  RenderableVideo.cpp  RenderableVideo.h  WeatherEntry.cpp  WeatherEntry.h  main.cpp
cmake/: FindCEC.cmake  FindDRM.cmake  FindGObject.cmake  FindGStreamer.cmake  FindGStreamerPluginsBase.cmake  FindRestclient.cmake  MacroFindGStreamerLibrary.cmake
movies/: mirror.webm
restclient-cpp/include/: connection.h  restclient.h
restclient-cpp/lib/: librestclient-cpp.2.1.1.dylib  librestclient-cpp.dylib
